crates/parser/src/snapshots/squawk_parser__parse__tests__alter_extension_contents_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: AlterObjectSchemaStmt(
                Object({
                    "newschema": String(
                        "utils",
                    ),
                    "object": Object({
                        "String": Object({
                            "sval": String(
                                "hstore",
                            ),
                        }),
                    }),
                    "objectType": String(
                        "OBJECT_EXTENSION",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                39,
            ),
        },
    ],
)
