crates/parser/src/snapshots/squawk_parser__parse__tests__alter_op_class_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: RenameStmt(
                RenameStmt {
                    newname: "new_name",
                    behavior: Restrict,
                    relation: None,
                    relation_type: AccessMethod,
                    rename_type: Opclass,
                    subname: None,
                },
            ),
            stmt_location: 0,
            stmt_len: Some(
                64,
            ),
        },
        RawStmt {
            stmt: AlterOwnerStmt(
                Object({
                    "newowner": Object({
                        "location": Number(
                            124,
                        ),
                        "roletype": String(
                            "ROLESPEC_CURRENT_USER",
                        ),
                    }),
                    "object": Object({
                        "List": Object({
                            "items": Array([
                                Object({
                                    "String": Object({
                                        "sval": String(
                                            "index_method",
                                        ),
                                    }),
                                }),
                                Object({
                                    "String": Object({
                                        "sval": String(
                                            "name",
                                        ),
                                    }),
                                }),
                            ]),
                        }),
                    }),
                    "objectType": String(
                        "OBJECT_OPCLASS",
                    ),
                }),
            ),
            stmt_location: 65,
            stmt_len: Some(
                71,
            ),
        },
        RawStmt {
            stmt: AlterObjectSchemaStmt(
                Object({
                    "newschema": String(
                        "new_schema",
                    ),
                    "object": Object({
                        "List": Object({
                            "items": Array([
                                Object({
                                    "String": Object({
                                        "sval": String(
                                            "index_method",
                                        ),
                                    }),
                                }),
                                Object({
                                    "String": Object({
                                        "sval": String(
                                            "name",
                                        ),
                                    }),
                                }),
                            ]),
                        }),
                    }),
                    "objectType": String(
                        "OBJECT_OPCLASS",
                    ),
                }),
            ),
            stmt_location: 137,
            stmt_len: Some(
                71,
            ),
        },
    ],
)
