crates/parser/src/snapshots/squawk_parser__parse__tests__alter_operator_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: AlterOwnerStmt(
                Object({
                    "newowner": Object({
                        "location": Number(
                            41,
                        ),
                        "rolename": String(
                            "joe",
                        ),
                        "roletype": String(
                            "ROLESPEC_CSTRING",
                        ),
                    }),
                    "object": Object({
                        "ObjectWithArgs": Object({
                            "objargs": Array([
                                Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            20,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "text",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            26,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "text",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                            ]),
                            "objname": Array([
                                Object({
                                    "String": Object({
                                        "sval": String(
                                            "@@",
                                        ),
                                    }),
                                }),
                            ]),
                        }),
                    }),
                    "objectType": String(
                        "OBJECT_OPERATOR",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                44,
            ),
        },
        RawStmt {
            stmt: AlterObjectSchemaStmt(
                Object({
                    "newschema": String(
                        "bar",
                    ),
                    "object": Object({
                        "ObjectWithArgs": Object({
                            "objargs": Array([
                                Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            65,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "text",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            71,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "text",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                            ]),
                            "objname": Array([
                                Object({
                                    "String": Object({
                                        "sval": String(
                                            "@@",
                                        ),
                                    }),
                                }),
                            ]),
                        }),
                    }),
                    "objectType": String(
                        "OBJECT_OPERATOR",
                    ),
                }),
            ),
            stmt_location: 45,
            stmt_len: Some(
                46,
            ),
        },
        RawStmt {
            stmt: AlterOperatorStmt(
                Object({
                    "opername": Object({
                        "objargs": Array([
                            Object({
                                "TypeName": Object({
                                    "location": Number(
                                        112,
                                    ),
                                    "names": Array([
                                        Object({
                                            "String": Object({
                                                "sval": String(
                                                    "_int4",
                                                ),
                                            }),
                                        }),
                                    ]),
                                    "typemod": Number(
                                        -1,
                                    ),
                                }),
                            }),
                            Object({
                                "TypeName": Object({
                                    "location": Number(
                                        119,
                                    ),
                                    "names": Array([
                                        Object({
                                            "String": Object({
                                                "sval": String(
                                                    "_int4",
                                                ),
                                            }),
                                        }),
                                    ]),
                                    "typemod": Number(
                                        -1,
                                    ),
                                }),
                            }),
                        ]),
                        "objname": Array([
                            Object({
                                "String": Object({
                                    "sval": String(
                                        "&&",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                    "options": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            142,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "_int_contsel",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "restrict",
                                ),
                                "location": Number(
                                    131,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            163,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "_int_contjoinsel",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "join",
                                ),
                                "location": Number(
                                    156,
                                ),
                            }),
                        }),
                    ]),
                }),
            ),
            stmt_location: 92,
            stmt_len: Some(
                88,
            ),
        },
    ],
)
