crates/parser/src/snapshots/squawk_parser__parse__tests__alter_subscription_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: AlterSubscriptionStmt(
                Object({
                    "kind": String(
                        "ALTER_SUBSCRIPTION_SET_PUBLICATION",
                    ),
                    "publication": Array([
                        Object({
                            "String": Object({
                                "sval": String(
                                    "insert_only",
                                ),
                            }),
                        }),
                    ]),
                    "subname": String(
                        "mysub",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                53,
            ),
        },
        RawStmt {
            stmt: AlterSubscriptionStmt(
                Object({
                    "kind": String(
                        "ALTER_SUBSCRIPTION_ENABLED",
                    ),
                    "options": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "Boolean": Object({
                                        "boolval": Bool(
                                            false,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "enabled",
                                ),
                                "location": Number(
                                    55,
                                ),
                            }),
                        }),
                    ]),
                    "subname": String(
                        "mysub",
                    ),
                }),
            ),
            stmt_location: 54,
            stmt_len: Some(
                33,
            ),
        },
    ],
)
