crates/parser/src/snapshots/squawk_parser__parse__tests__alter_ts_dictionary_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: AlterTSDictionaryStmt(
                Object({
                    "dictname": Array([
                        Object({
                            "String": Object({
                                "sval": String(
                                    "my_dict",
                                ),
                            }),
                        }),
                    ]),
                    "options": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            52,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "newrussian",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "stopwords",
                                ),
                                "location": Number(
                                    40,
                                ),
                            }),
                        }),
                    ]),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                64,
            ),
        },
    ],
)
